--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Myopia Simulator</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OpHere</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+
+        h1 {
+            color: #3498db;
+            font-size: 2.5em;
+            margin-top: 20px;
+        }
+
+        form {
+            margin-top: 50px;
+        }
+
+        input[type="file"] {
+            margin-bottom: 20px;
+        }
+
+        input[type="submit"] {
+            background-color: #3498db;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1.2em;
+            cursor: pointer;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #2980b9;
+        }
+    </style>
 </head>
 <body>
-    <h1>Myopia Simulator</h1>
+    <h1>OpHere</h1>
     <form action="/" method="post" enctype="multipart/form-data">
         <input type="file" name="image" accept="image/*" required>
+        <br />
         <input type="submit" value="Upload and Process">
     </form>
 </body>
