--- a/backend/templates/result.html
+++ b/backend/templates/result.html
@@ -3,18 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Result</title>
+    <title>Image Analysis Result</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        h1 {
+            color: #3498db;
+            font-size: 2.5em;
+            margin-top: 20px;
+        }
         .image-container {
             display: flex;
             justify-content: space-around;
             align-items: center;
+            margin-top: 20px;
         }
         .image-container img {
             max-width: 45%;  /* Adjust the size as needed */
             height: auto;
             border: 1px solid #ddd;  /* Add border for better visual separation */
             margin: 10px;
+        }
+        a {
+            color: #3498db;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
